# asana-gitlab-syncer

./: .gitignore  Dockerfile  concourse.yml  pyproject.toml  syncer.py
syncer/: config.py  sync.py
syncer/api/: asana.py  gitlab.py
