[project]
name = "asana-gitlab-syncer"
version = "0.1.0"
description = ""
authors = [
    {name = "Adi Wabisabi",email = "adi@wabisabi.guru"}
]
requires-python = ">=3.12"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
